Enabled test parallelization